# astro_research

./: .gitignore  LICENSE  README.md  demo_visualization.py  pyproject.toml  pytest.ini
config/: default.yaml
scripts/: generate_test_data.py
src/astro_research/: __init__.py  cli.py
src/astro_research/config/: __init__.py  settings.py
src/astro_research/core/: __init__.py  exceptions.py  logger.py  types.py
src/astro_research/detection/: __init__.py  detector.py  extractor.py
src/astro_research/download/: __init__.py  base.py  manager.py  ztf.py
src/astro_research/preprocessing/: __init__.py  alignment.py  calibration.py  processor.py
src/astro_research/tracking/: __init__.py  linking.py  tracker.py
src/astro_research/visualization/: __init__.py  plotter.py  reporter.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_core.py  test_detection.py
