[project]
name = "astro-research"
version = "0.1.0"
description = "Automated asteroid detection pipeline for astronomical images"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agustin", email = "your.email@example.com"}
]
dependencies = [
    "astropy>=6.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "photutils>=1.9",
    "sep>=1.2",
    "opencv-python>=4.8",
    "typer>=0.9",
    "rich>=13.5",
    "pyyaml>=6.0",
    "requests>=2.31",
    "astroquery>=0.4",
    "pandas>=2.0",
    "plotly>=5.17",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.9",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
api = [
    "fastapi>=0.103",
    "uvicorn>=0.23",
    "pydantic>=2.4",
]
ml = [
    "scikit-learn>=1.3",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
astro-detect = "astro_research.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astro_research"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=astro_research --cov-report=html --cov-report=term"